--- a/ctlist/templates/ProjectPage.html
+++ b/ctlist/templates/ProjectPage.html
@@ -15,7 +15,7 @@ table, td, th{
 <table style="width:100%">
   <tr>
   	<th>{{ forloop.counter }}</th>
-    <th>Name</th>
+    <th>name</th>
     <th>Essential Order</th>
     <th>Quantity</th>
     <th>Address</th>
@@ -28,7 +28,7 @@ table, td, th{
 
     <tr>
     <td>{{ forloop.counter }}</td>
-    <td>{{ mvg.Name }}</td>
+    <td>{{ mvg.name }}</td>
     <td>{{ mvg.Essential}}</td>
     <td>{{ mvg.Quantity}}</td>
     <td>{{ mvg.Address }}</td>
