--- a/ctlist/templates/fourth.html
+++ b/ctlist/templates/fourth.html
@@ -1,185 +1,262 @@
+{% load static %}
 <html>
 <head>
+  <link href="('{{ STATIC_URL }}IMAGE/background.jpg')">
   <title>Funeral Services</title>
   <body>
 <style>
-body { 
-  font-family: Calibri, Helvetica, sans-serif;  
-  background-color: #26262b;  
+body {  
+  background-color: black;
+  background-image: url( "{% static 'IMAGE/background.jpg' %}");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+div.gallery {
+  margin: 5px;
+  border: 1px solid #ccc;
+  float: left;
+  width: 180px;
+}
+
+div.gallery:hover {
+  border: 1px solid #777;
+}
+
+div.gallery img {
+  width: 100%;
+  height: auto;
+}
+
+div.desc {
+  padding: 15px;
+  text-align: center;
+}
+.hide {
+  display: none;
+}
+    
+.hover:hover + .hide {
+  display: block;
+  color: white;
+}
+hr {
+  border: 3px solid white;
+  border-radius: 3px;
+}
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+}
+
+li {
+  float: left;
+  border-right:1px solid #bbb;
+}
+
+li:last-child {
+  border-right: none;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+li a:hover:not(.active) {
+  background-color: white;
+}
+.active {
+  background-color: #04AA6D;
+  }
+a:hover, a:active {
+  background-color: red;
+}
+a:link, a:visited {
+  background-color: #f44336;
+  color: black;
+  padding: 14px 25px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+} 
+.registerbtn:hover {
+  background-color: white;
+  opacity: 1;
 }
 </style>
 </body>
 </head>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
+<body style="background-image: url(('{{ STATIC_URL }}IMAGE/background.jpg'))';">
 <center>
-<body>
-    <h1 style="color:white">Welcome to Funeral Services</h1>
-    <h2 style="color:white">Direct Cremation</h2>
+    <div class="container">
+    <h1 style="color:white">Welcome to Funiverse Plan and Services</h1>
+    <h3 style="color:white">Direct Cremation</h3>
+      <script>
+function startTime() {
+  var today = new Date();
+  var h = today.getHours();
+  var m = today.getMinutes();
+  var s = today.getSeconds();
+  m = checkTime(m);
+  s = checkTime(s);
+  document.getElementById('txt').innerHTML =
+  h + ":" + m + ":" + s;
+  var t = setTimeout(startTime, 1000);
+}
+function checkTime(i) {
+  if (i < 10) {i = "0" + i}; 
+  return i;
+}
+</script>
+</head>
+
+<body onload="startTime()">
+
+<div id="txt" style="color:white"  height: 100px;></div>
+<hr>
 </center>
-    <hr>
-<h3 style="color:white">Cremation w/ Traditional Service</h3>
-<p style="color:white">Name of beneficiary:<input type="text" id="Name" name="Name" required/>&nbsp;
-    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  Please select your sex:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <input type="radio" id="male" name="sex" value="male">
-  <label for="male">Male</label>
-  <input type="radio" id="female" name="sex" value="female">
-  <label for="female">Female</label></p>
-  <p style="color:white">Contact Number:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <input type="text" id="Contact" name="Contact" required/>&nbsp;
-    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  Address:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    &nbsp;&nbsp;
-    &nbsp;<input type="text" id="Address" name="Address" required/></p>
-  <label for="birthday" style="color:white">Birthday:</label>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <input type="date" id="birthday" name="birthday">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  &nbsp;&nbsp;&nbsp;&nbsp;
-  <a style="color:white">Relationship to the beneficiary:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <input type="text" id="Contact" name="Contact" required/>&nbsp;
-<form id="asd" action="">
-  <p style="color:white"><b>Available Services</b></p>
-<div data-ng-app="" data-ng-init="quantity=1;price=850">
-<p style="color:white">Staff Service&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  &nbsp;&nbsp;
+<ul>
+  <li style="float:center"><a href="second.html" type="submit" class="registerbtn">Home</a></li> 
+  <li style="float:center"><a href="third.html" type="submit" class="registerbtn">Traditional Funeral Services</a></li>
+  <li style="float:center"><a href="fourth.html" type="submit" class="registerbtn">Direct Cremation</a></li>
+  <li style="float:center"><a href="fifth.html" type="submit" class="registerbtn">Send Flowers</a></li>
+<!--   <li style="float:center"><a href="fifth.html" type="submit" class="registerbtn">About</a></li> -->
+</ul>
+<!-- <main>
+<p style="color:white"><b>Staff Service</b></p>
+<div class="hover" style="color:white" >Hover here</div>
+<div class="hide"><i>This service serves as to pick up the body.</i></div>
+<label for="Quantity" style="color:white">Number of staff:</label>
+<input type="number" id="Quantity" name="Quantity">
 
-<a style="color:white"><input type="number" ng-model="quantity"></a>
-<a style="color:white"> Price: <input type="text" ng-model="850">
-<i>Subtotal:</i> {{quantity * price}}</a>
+<label for="Price" style="color:white">Price</label>
+<input type="number" id="Price" name="Price" placeholder="450"></br></br>
 
-<div data-ng-app="" data-ng-init="quantity=1;price1=55">
-<form>
-  <label for="embalming" style="color:white">Embalming:&nbsp;&nbsp;&nbsp;
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
-  <select name="embalming" id="embalming">
-    <option value="blank"></option>
-    <option value="Arterial Embalming">Arterial Embalming</option>
-    <option value="Cavity Embalming">Cavity Embalming</option>
-  </select>
-  <br><br>
-</form>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<a style="color:white">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  &nbsp;&nbsp;<input type="number" ng-model="quantity1"></a>
-<a style="color:white"> Price1: <input type="text" ng-model="55">
-<i>Subtotal:</i> {{quantity1 * price1}}</a></br></br>
-
-<div data-ng-app="" data-ng-init="quantity=1;price2=55">
-<p style="color:white">Cremation charge
-<a style="color:white"><input type="number" ng-model="quantity2"></a>
-<a style="color:white"> Price: <input type="text" ng-model="55">
-<i>Subtotal:</i> {{quantity2 * price2}}</a>
-<p style="color:white">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Available Services Total: {{quantity * price + quantity1 * price1 + quantity2 * price2}}</p>
+<button onclick="multiply()">Show result</button>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<label for="result" style="color:white">Subtotal</label>
+<input type="number" id="result" name="result"/>
+</main>
+<script>
+function multiply(){
+    num1 = document.getElementById("Quantity").value;
+    num2 = document.getElementById("Price").value;
+    result = num1 * num2;
+    document.getElementById("result").value = result;
+}
+</script>
+</br> -->
 <p style="color:white"><b>Available Urns</b></p>
- <p style="color:white">Product:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<div class="gallery">
+  <p target="_blank">
+    <img src="{% static 'IMAGE/individual.jpeg' %}" alt="My image" style="width:180;height:150px;">
+  </p>
+  <div class="desc" style="color:#e44e4e"><b>Individual Cremation Urns</b></div>
+</div>
+<div class="gallery">
+  <p target="_blank">
+    <img src="{% static 'IMAGE/companion.jpg' %}" alt="My image" style="width:180;height:150px;">
+  </p>
+  <div class="desc" style="color:#e44e4e"><b>Companion Cremation Urns</b></div>
+</div>
+<div class="gallery">
+  <p target="_blank">
+    <img src="{% static 'IMAGE/keepsake.jpg' %}" alt="My image" style="width:180;height:150px;">
+  </p>
+  <div class="desc" style="color:#e44e4e"><b>Keepsake Cremation Urns</b></div>
+</div>
+<div class="gallery">
+  <p target="_blank">
+    <img src="{% static 'IMAGE/3D.jpg' %}" alt="My image" style="width:180;height:150px;">
+  </p>
+  <div class="desc" style="color:#e44e4e"><b>3D Artisan Cremation Urns</b></div>
+</div>
+<div class="gallery">
+  <p target="_blank">
+    <img src="{% static 'IMAGE/child.jpg' %}" alt="My image" style="width:180;height:150px;">
+  </p>
+  <div class="desc" style="color:#e44e4e"><b>Child and Infant Cremation Urns</b></div>
+</div>
+<div class="gallery">
+  <p target="_blank">
+    <img src="{% static 'IMAGE/pet.jpg' %}" alt="My image" style="width:180;height:150px;">
+  </p>
+  <div class="desc" style="color:#e44e4e"><b>The Pet Cremation Urns</b></div>
+</div>
+</br></br></br></br></br></br></br></br></br></br></br></br></br></br>
+ <p style="color:white">Product:
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <select name='product' id='product' required>
-      <option value="Individual Cremation Urns">Individual Cremation Urns</option>
-      <option value="Companion Cremation Urns">Companion Cremation Urns</option>
-      <option value="Metal Casket">Metal Casket</option>
-      <option value="Keepsake Cremation Urns">Keepsake Cremation Urns</option></p>
-      <option value="3D Artisan Portrait Cremation Urns">3D Artisan Portrait Cremation Urns</option></p>
-      <option value="Eco-Friendly Cremation Urns">Eco-Friendly Cremation Urns</option></p>
-      <option value="Child and Infant Cremation Urns">Child and Infant Cremation Urns</option></p>
-      <option value="Pet Cremation Urns">Pet Cremation Urns</option></p>
+      <option value="Individual Cremation Urns" id="Urns1">Individual Cremation Urns</option>
+      <option value="Companion Cremation Urns" id="Urns2">Companion Cremation Urns</option>
+      <option value="Keepsake Cremation Urns" id="Urns3">Keepsake Cremation Urns</option>
+      <option value="3D Artisan Portrait Cremation Urns" id="Urns4">3D Artisan Portrait Cremation Urns</option>
+      <option value="Child and Infant Cremation Urns" id="Urns5">Child and Infant Cremation Urns</option>
+      <option value="Pet Cremation Urns" id="Urns6">Pet Cremation Urns</option></p>
     </select></br>
 
-    <br> Quantity:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-     <input type="text" name="quantity" id='quantity' required></br>
-     <br> Size:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <select name='size' id='size'>
-      <option value="15 cubic inches">15 cubic inches</option>
-      <option value="100 cubic inches">100 cubic inches</option>
-      <option value="150 cubic inches">150 cubic inches</option>
-      <option value="200 cubic inches">200 cubic inches</option>
-      <option value="220 cubic inches">220 cubic inches</option>
-      <option value="250 cubic inches">250 cubic inches</option>
-      <option value="300 cubic inches">300 cubic inches</option>
-    </select>
-        <p style="color:white">Price:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <br> Quantity:
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <span id="totalCost"></span></p>
-    <h3 style="color:white">Billing form</h3>
-  <p style="color:white">Name:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="text" id="Name" name="Name" required/>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Email:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="text" id="Email" name="Email" required/>
-  <input type="checkbox" id="copy" name="copy" value="copy">
-  <label for="copy">Always send me updates.</label></p>
-  <p style="color:white">Permanent Address:<input type="text" id="Address2" name="Address2" required/>
-   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Zip code:<input type="text" id="zip" name="zip" required/></p>
-  <p style="color:white">Contact Number:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="text" id="Number2" name="Number2" required/></p>
-  <label for="payment"style="color:white">Select your payment</br>availability:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
-  <select name="payment" id="payment">
-    <option value="Annual">Annual</option>
-    <option value="Semi-Annual">Semi-Annual</option>
-    <option value="Quarterly">Quarterly</option>
-    <option value="Monthly">Monthly</option>
-  </select></br></br>
-  <label for="mode"style="color:white">Mode of Payment:&nbsp;&nbsp;&nbsp;</label>
-  <select name="mode" id="mode">
-    <option value="Savings accounts">Savings accounts</option>
-    <option value="Checking accounts.">Checking accounts.</option>
-    <option value="Salary account.">Salary account.</option>
-    <option value="Walk-in">Walk-in</option>
-  </select>
-    <form>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+     <input type="text" name="quantity" id='quantity' required></br>
+     <br> Size:
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <select name='size' id='size'>
+      <option value="Regular size" id="size1" name="cubic1">Regular size</option>
+      <option value="15 cubic inches" id="size2" name="cubic2">15 cubic inches</option>
+      <option value="100 cubic inches" id="size3" name="cubic3">100 cubic inches</option>
+      <option value="200 cubic inches" id="size4" name="cubic4">200 cubic inches</option>
+      <option value="220 cubic inches" id="size5" name="cubic5">220 cubic inches</option>
+      <option value="250 cubic inches" id="size6" name="cubic6">250 cubic inches</option>
+      <option value="300 cubic inches" id="size7" name="cubic7">300 cubic inches</option>
+    </select>
+        <p style="color:white">Price:
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    <span id="totalCost" style="color:black">></span></p>
 <script>
 var productEl = document.querySelector('#product');
 var quantityEl = document.querySelector('#quantity');
 var sizeEl = document.querySelector('#size');
 var totalCostEl = document.querySelector('#totalCost');
 
-//Add the change event handlers on the applicable elements
+
 productEl.addEventListener('change', calculateTotal);
 quantityEl.addEventListener('change', calculateTotal);
 sizeEl.addEventListener('change', calculateTotal);
 
-//Store your data in an object literal (essentially creating a map)
-var product_price = {}; //Noticed I replaced the [] with {}
-product_price['Individual Cremation Urns'] = 80000;
-product_price['Companion Cremation Urns'] = 120000;
-product_price['Keepsake Cremation Urns'] = 150000;
-product_price['3D Artisan Portrait Cremation Urns'] = 150000;
-product_price['Eco-Friendly Cremation Urns'] = 150000;
-product_price['Child and Infant Cremation Urns'] = 150000;
-product_price['Child and Infant Cremation Urns'] = 150000;
-product_price['Pet Cremation Urns'] = 150000;
+var product_price = {};
+product_price['Individual Cremation Urns'] = 15000;
+product_price['Companion Cremation Urns'] = 20000;
+product_price['Keepsake Cremation Urns'] = 13500;
+product_price['3D Artisan Portrait Cremation Urns'] = 26500;
+product_price['Child and Infant Cremation Urns'] = 10500;
+product_price['Pet Cremation Urns'] = 8500;
 
 
-var size_price = {};   //Noticed I replaced the [] with {}
-size_price['15 cubic inches'] = 15500;
-size_price['100 cubic inches'] = 13800;
-size_price['150 cubic inches'] = 22500;
-size_price['200 cubic inches'] = 30250;
-size_price['220 cubic inches'] = 12000;
-size_price['250 cubic inches'] = 12000;
-size_price['300 cubic inches'] = 12000;
+var size_price = {};
+size_price['Regular size'] = 1000;
+size_price['15 cubic inches'] = 1500;
+size_price['100 cubic inches'] = 2000;
+size_price['150 cubic inches'] = 2500;
+size_price['200 cubic inches'] = 3500;
+size_price['250 cubic inches'] = 4000;
+size_price['300 cubic inches'] = 4500;
 
-//Here's our single event handler - called when any of the 3 elements fire a 'change' event
 function calculateTotal() {
-  //console.log()
+
   var unitCost = product_price[productEl.value];
   var additionalCost = size_price[sizeEl.value] || 0;
   var qty = quantityEl.value || 0;
@@ -189,7 +266,7 @@ function calculateTotal() {
 </script>
 </div>
 <center>
-  <input type="submit" id="button" name="button" value="              Submit              "/><br>
+  <a href="sixth.html" type="submit" class="registerbtn" style="color:black">Proceed to payment center</a>
 </center>
 </form>
 </body>
